# vk-music-fs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.ru.md  CMakeLists.txt  README.md  README.ru.md  fuse_wrap.h  main.cpp  mingw-w64-toolchain.txt  mingw-w64-x64-toolchain.txt
appimage/: .gitignore  create_appimage.py  vk_music_fs.desktop
cfgpath/: CMakeLists.txt  cfgpath.h
cpp-lru-cache-mod/: CMakeLists.txt  lrucache.hpp
di/: CMakeLists.txt
json/: CMakeLists.txt
nowide/: CMakeLists.txt
src/: Application.h  AudioFs.h  BlockingBuffer.cpp  BlockingBuffer.h  CMakeLists.txt  CacheSaver.h  ErrLogger.h  FileCache.cpp  FileCache.h  FileManager.cpp  FileManager.h  FileProcessor.cpp  FileProcessor.h  HttpException.cpp  HttpException.h  HttpStream.cpp  HttpStream.h  HttpStreamCommon.cpp  HttpStreamCommon.h  IFileManager.h  Mp3Parser.cpp  Mp3Parser.h  MusicFile.cpp  MusicFile.h  MusicFsException.cpp  ProgramOptions.cpp  ProgramOptions.h  Reader.cpp  Reader.h  RemoteException.cpp  RemoteException.h  RemoteFile.cpp  RemoteFile.h  SizeObtainer.cpp  SizeObtainer.h  TagSizeCalculator.cpp  TagSizeCalculator.h  ThreadPool.cpp  ThreadPool.h  VkApi.cpp  (+6 more)
src/cache/: CMakeLists.txt  CacheSaver.cpp  CacheSaver.h  CommonCache.cpp  CommonCache.h  File.cpp  File.h  FileBuffer.cpp  FileBuffer.h  FileCache.cpp  FileCache.h  MusicFile.cpp  MusicFile.h  PhotoCache.cpp  PhotoCache.h  PhotoFile.cpp  PhotoFile.h
src/common/: CMakeLists.txt  ErrLogger.cpp  ErrLogger.h  IOBlock.h  IOBlockCreator.h  IdGenerator.cpp  IdGenerator.h  MusicFsException.cpp  MusicFsException.h  OverridableSetting.h  RealFs.cpp  RealFs.h  RemotePhotoFile.cpp  RemotePhotoFile.h  ThreadPool.cpp  common.h
src/diext/: Storage.h  common_di.h  ext_factory.hpp  goodscoped.h
src/fs/: AsyncFsManager.cpp  AsyncFsManager.h  AudioFs.cpp  AudioFs.h  CMakeLists.txt  Dir.cpp  Dir.h  DirOrFile.cpp  DirOrFile.h  File.cpp  File.h  FileInfo.cpp  FileInfo.h  FileName.cpp  FileName.h  FileObtainer.cpp  FileObtainer.h  FsException.cpp  FsException.h  FsPath.cpp  FsPath.h  FsSettings.cpp  FsSettings.h  FsUtils.cpp  FsUtils.h  IdGenerator.cpp  IdGenerator.h  Mp3FileName.cpp  Mp3FileName.h  OffsetCnt.cpp  OffsetCnt.h  OffsetCntName.cpp  OffsetCntName.h  OffsetCntPlaylist.cpp  OffsetCntPlaylist.h  OffsetCntRemoteFile.cpp  OffsetCntRemoteFile.h  OffsetName.cpp  OffsetName.h  SearchDirMaker.cpp  (+4 more)
src/fs/0tests/: AsyncFsManagerT.cpp  AudioFsT.cpp  CMakeLists.txt  PlaylistCtrlT.cpp  SimilarCtrlT.cpp
src/fs/0tests/data/: CtrlM.h  FileCacheM.h  FileManagerM.h  FileObtainerM.h  PhotoCacheM.h  PhotoManagerM.h  RealFsM.h  ThreadPoolM.h
src/fs/actions/: DeleteDirAct.h  DeleteFileAct.h  NumberAct.cpp  NumberAct.h  RefreshAct.cpp  RefreshAct.h  RemoveRefreshDirAct.h  act.h
src/fs/ctrl/: AddToMyAudiosCtrl.h  DummyDirWrapper.cpp  DummyDirWrapper.h  MyAudiosCtrl.cpp  MyAudiosCtrl.h  PlaylistCtrl.cpp  PlaylistCtrl.h  RedirectCtrl.cpp  RedirectCtrl.h  RemoteFileWrapper.cpp  RemoteFileWrapper.h  RootCtrl.cpp  RootCtrl.h  SearchSongNameArtistHelper.cpp  SearchSongNameArtistHelper.h  SearchSongNameCtrl.cpp  SearchSongNameCtrl.h  SearchSongNameSongHelper.cpp  SearchSongNameSongHelper.h  SimilarCtrl.h  SingleDirCtrl.cpp  SingleDirCtrl.h  ThrowExCtrl.cpp  ThrowExCtrl.h  ctrl.h
src/fuse-utils/: CMakeLists.txt  fuse_wrap.h
src/main/: Application.h  CMakeLists.txt  FakeFs.h  NoReportException.cpp  NoReportException.h  ProgramOptions.cpp  ProgramOptions.h
src/mp3core/: BlockingBuffer.cpp  BlockingBuffer.h  CMakeLists.txt  FileManager.h  FileProcessor.cpp  FileProcessor.h  FileProcessorCreator.cpp  FileProcessorCreator.h  Mp3Parser.cpp  Mp3Parser.h  PhotoProcessor.cpp  PhotoProcessor.h  PhotoProcessorCreator.cpp  PhotoProcessorCreator.h  Reader.cpp  Reader.h  RemoteException.h  RemoteFile.cpp  RemoteFile.h  TagSizeCalculator.cpp  TagSizeCalculator.h  common_mp3core.h
src/mp3core/0tests/: BlockingBufferT.cpp  CMakeLists.txt  FileManagerT.cpp  FileProcessorMp3ParserT.cpp  FileProcessorT.cpp  Mp3ParserT.cpp  PhotoProcessorT.cpp
src/mp3core/0tests/data/: FileM.h  Mp3Files.h  MusicData.h  ParserM.h  StreamM.h  TestBlockCreator.h  ThreadPoolM.h  Writer.h
src/net/: CMakeLists.txt  HttpException.cpp  HttpException.h  HttpStream.cpp  HttpStream.h  HttpStreamCommon.cpp  HttpStreamCommon.h  Mp3SizeObtainer.cpp  Mp3SizeObtainer.h  SizeObtainer.cpp  SizeObtainer.h  Timer.h  VkApiQueryMaker.cpp  VkApiQueryMaker.h  VkSettings.h  WrongSizeException.cpp  WrongSizeException.h  common_net.h
src/token/: CMakeLists.txt  ProtobufException.cpp  ProtobufException.h  SmallProtobufHelper.cpp  SmallProtobufHelper.h  TokenException.cpp  TokenException.h  TokenReceiver.cpp  TokenReceiver.h  common_token.h
taglib_mod/: CMakeLists.txt  audioproperties.cpp  config.h  fileref.cpp  tagunion.cpp  tagutils.cpp  tagutils.h
taglib_mod/mpeg/: mpegfile.cpp  mpegfile.h  mpegproperties.cpp
taglib_mod/mpeg/id3v2/: id3v2tag.cpp  id3v2tag.h
taglib_mod/toolkit/: tfile.cpp
tests/: AudioFsT.cpp  CMakeLists.txt  FileManagerT.cpp  FileNameT.cpp  FileProcessorMp3ParserT.cpp  FileProcessorT.cpp  FsUtilsT.cpp  Mp3ParserT.cpp  VkApiT.cpp
tests/data/: FileM.h  FileManagerM.h  FsHelper.h  Mp3Files.h  MusicData.h  ParserM.h  StreamM.h  ThreadPoolM.h  Writer.h
